# vize

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  SECURITY.md  SUPPORT.md  actrun.toml  cliff.toml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  ubugeeei-redundancy.md  vite.config.ts
crates/vize_armature/: Cargo.toml
crates/vize_armature/src/: legacy.rs  lib.rs  parser.rs  tokenizer.rs
crates/vize_armature/src/parser/: attribute.rs  callbacks.rs  element.rs  tests.rs  whitespace.rs
crates/vize_armature/src/tokenizer/: states.rs  tests.rs  types.rs
crates/vize_atelier_core/: Cargo.toml  README.md
crates/vize_atelier_core/src/: codegen.rs  lane.rs  lib.rs  runtime_helpers.rs  steps.rs  test_macros.rs  transform.rs  transforms.rs
crates/vize_atelier_core/src/codegen/: children.rs  component_binding.rs  context.rs  emit.rs  expression.rs  generate.rs  helpers.rs  node.rs  patch_flag.rs  pipeline.rs  props.rs  root.rs  slots.rs  source_map.rs  tests.rs  v_for.rs  v_if.rs
crates/vize_atelier_core/src/lane/: mod.rs  tests.rs
crates/vize_atelier_core/src/snapshots/: vize_atelier_core__codegen__tests__codegen_component.snap  vize_atelier_core__codegen__tests__codegen_conditional_slot_with_else_does_not_append_undefined.snap  vize_atelier_core__codegen__tests__codegen_default_slot_with_v_if_is_stable.snap  vize_atelier_core__codegen__tests__codegen_dynamic_keyed_slot_child_uses_block.snap  vize_atelier_core__codegen__tests__codegen_forwarded_default_slot_is_marked_forwarded.snap  vize_atelier_core__codegen__tests__codegen_interpolation.snap  vize_atelier_core__codegen__tests__codegen_looped_slot_key_and_index_aliases_stay_local_in_dynamic_args.snap  vize_atelier_core__codegen__tests__codegen_merged_v_on_handlers_are_cached.snap  vize_atelier_core__codegen__tests__codegen_nested_v_model_on_input_with_custom_directive.snap  vize_atelier_core__codegen__tests__codegen_numeric_template_v_for_uses_fragment.snap  vize_atelier_core__codegen__tests__codegen_pascal_case_dynamic_component.snap  vize_atelier_core__codegen__tests__codegen_pascal_case_dynamic_component_inside_v_for.snap  vize_atelier_core__codegen__tests__codegen_scoped_slot_params_stay_local_in_handlers.snap  vize_atelier_core__codegen__tests__codegen_slot_fallback.snap  vize_atelier_core__codegen__tests__codegen_v_for_aliases_without_parentheses_stay_local.snap  vize_atelier_core__codegen__tests__codegen_v_for_scope_handlers_are_not_cached.snap  vize_atelier_core__codegen__tests__codegen_v_if_branch_mixed_children_wrap_interpolations_in_text_vnodes.snap  vize_atelier_core__codegen__tests__codegen_v_if_template_fragment_wraps_interpolation_in_text_vnode.snap  vize_atelier_core__codegen__tests__codegen_v_if_template_fragment_wraps_static_text_in_text_vnode.snap  vize_atelier_core__codegen__tests__codegen_v_model_on_component.snap  vize_atelier_core__codegen__tests__codegen_v_model_on_input.snap  (+4 more)
crates/vize_atelier_core/tests/: legacy_event_modifiers.rs  legacy_filters.rs  legacy_template_sugar.rs  scoped_slot_shadowing.rs
crates/vize_atelier_jsx/: Cargo.toml
crates/vize_atelier_jsx/benches/: jsx_compile.rs
crates/vize_atelier_jsx/src/: analyze.rs  compile.rs  diagnostics.rs  dom.rs  finder.rs  lang.rs  lib.rs  lower.rs  mode.rs  parse.rs  scoped.rs  span.rs  ssr.rs  vapor.rs  vdom.rs
crates/vize_atelier_jsx/tests/: PARITY_INVENTORY.md  adversarial_snapshots.rs  analysis.rs  attributes.rs  children.rs  compile.rs  components.rs  control_flow.rs  diagnostics.rs  directives.rs  dom.rs  ecosystem_smoke.rs  edge_cases.rs  elements.rs  events.rs  fragments.rs  modes.rs  parity_tsx.rs  parity_vapor.rs  parity_vdom.rs  slots.rs  ssr.rs  style.rs  tsx.rs  vapor.rs  vapor_ssr.rs  vdom.rs
crates/vize_canon/: Cargo.toml
crates/vize_canon/snapshots/: vize_canon__virtual_ts__tests__virtual_ts_auto_import_stubs_skip_imported_names.snap  vize_canon__virtual_ts__tests__virtual_ts_component_prop_checks_respect_same_element_vif_guard.snap  vize_canon__virtual_ts__tests__virtual_ts_kebab_case_component_names.snap  vize_canon__virtual_ts__tests__virtual_ts_multiple_event_handlers.snap  vize_canon__virtual_ts__tests__virtual_ts_nested_vif_velse_chain.snap  vize_canon__virtual_ts__tests__virtual_ts_reserved_prop_and_hyphenated_slot_names.snap  vize_canon__virtual_ts__tests__virtual_ts_scoped_slot_expressions.snap  vize_canon__virtual_ts__tests__virtual_ts_template_binding_unwraps.snap  vize_canon__virtual_ts__tests__virtual_ts_vfor_component_props_in_scope.snap  vize_canon__virtual_ts__tests__virtual_ts_vfor_component_props_source_nested_in_vif_is_wrapped_for_narrowing.snap  vize_canon__virtual_ts__tests__virtual_ts_vfor_destructuring_scope.snap  vize_canon__virtual_ts__tests__virtual_ts_vfor_source_nested_in_vif_is_wrapped_for_narrowing.snap  vize_canon__virtual_ts__tests__virtual_ts_vfor_with_nested_vif_in_body_is_not_wrapped.snap  vize_canon__virtual_ts__tests__virtual_ts_vue_setup_helpers.snap  vize_canon__virtual_ts__tests__virtual_ts_vue_template_context.snap  vize_canon__virtual_ts__tests__virtual_ts_vue_template_context_with_globals.snap
crates/vize_canon/src/: batch.rs  corsa_bridge.rs  corsa_server.rs  corsa_session_cache.rs  file_uri.rs  intelligence.rs  legacy.rs  lib.rs  lsp_client.rs  options_api_setup_spread.rs  script_parse.rs  sfc_typecheck.rs  tests.rs  type_only_import_anchors.rs  typecheck_service.rs  virtual_ts.rs
crates/vize_canon/tests/: lsp_import_resolution.rs  nuxt_false_positives.rs  plain_script_named_exports.rs
crates/vize_croquis_cf/: Cargo.toml
crates/vize_croquis_cf/benches/: cross_file.rs
crates/vize_croquis_cf/src/: analyzer.rs  analyzers.rs  diagnostics.rs  lib.rs  registry.rs  rules.rs
crates/vize_curator/: Cargo.toml  README.md
crates/vize_curator/src/: inspector.rs  lib.rs  profile.rs
crates/vize_relief/: Cargo.toml
crates/vize_relief/src/: errors.rs  lib.rs  options.rs  relief.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: js_ts_expression.rs  sfc_parse.rs  template_lexer.rs
(+3328 files in other folders)
