[package]
name = "vize_armature"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Armature - The structural parser framework for Vize Vue templates"

[features]
# Opt-in support for legacy Vue lines (v0.10 / v0.11 / v1 / v2). Off by default so the
# Vue 3 `vize` binary never compiles it. See the `legacy` module. Forwards to
# `vize_relief/_legacy` so legacy-only AST surface (e.g. the Vue 1 raw-HTML
# `InterpolationNode::raw` flag this parser sets) is available.
legacy = ["vize_relief/_legacy"]

[dependencies]
vize_carton = { workspace = true }
vize_relief = { workspace = true }

compact_str = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
htmlize = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
