[package]
name = "vize_armature"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Armature - The structural parser framework for Vize Vue templates"

[features]
# Opt-in support for legacy Vue lines (v0.10 / v0.11 / v1 / v2). Off by default so the
# Vue 3 `vize` binary never compiles it. See the `legacy` module. Forwards to
# `vize_relief/_legacy` so legacy-only AST surface (e.g. the Vue 1 raw-HTML
# `InterpolationNode::raw` flag this parser sets) is available.
legacy = ["vize_relief/_legacy"]

[dependencies]
vize_carton = { workspace = true }
vize_relief = { workspace = true }

compact_str = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
htmlize = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[package.metadata.cargo-semver-checks.lints]
# `LegacyDialectCapabilities` (in the `legacy`-gated module) lists one `bool`
# per pre-Vue-3 dialect surface. Consumers obtain it through
# `LegacyDialectCapabilities::for_dialect()` and the `VUE3` const and only ever
# read its fields; it is never constructed with a struct literal in user code.
# Adding a capability is the explicit purpose of the module (each new Vue 0.x
# / Vue 1.x / Vue 2 surface lands as its own field), so the
# constructible-struct field-add lint would otherwise flag every capability as
# a major break.
#
# `vize_relief` avoids this by underscore-prefixing its `_legacy` feature so
# the cargo-semver-checks default feature heuristic excludes it (see the
# comment on `_legacy` in `vize_relief/Cargo.toml`). `vize_armature`'s
# `legacy` feature shipped without the `_` prefix (#1408), and renaming it
# now would itself trip `feature_missing`, so we allow this specific lint
# instead. Whether the accumulated legacy delta deserves a version bump is a
# release-time concern owned by release tooling, not a per-PR gate.
constructible_struct_adds_field = "allow"
