[package]
name = "vize_atelier_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Atelier Core - The core workshop for Vize Vue template parsing and transforms"

[features]
# Opt-in support for legacy Vue lines (v0.10 / v0.11 / v1 / v2). Off by default
# so the Vue 3 `vize` binary never compiles it. Enables dialect-gated legacy
# transforms such as Vue 2 pipe filters; forwards to the `legacy` features of
# the AST (`vize_relief`) and dialect-capability (`vize_armature`) crates.
legacy = ["vize_relief/_legacy", "vize_armature/legacy"]

[dependencies]
vize_carton = { workspace = true }
vize_croquis = { workspace = true }
vize_relief = { workspace = true }
vize_armature = { workspace = true }

memoffset = { workspace = true }
bumpalo = { workspace = true }
compact_str = { workspace = true }

# OXC
oxc_parser = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_span = { workspace = true }
oxc_allocator = { workspace = true }
oxc_syntax = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_codegen = { workspace = true }
oxc_semantic = { workspace = true }
oxc_transformer = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
