[package]
name = "vize_curator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Curator - local inspection and reporting utilities for Vize"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
vize_carton = { workspace = true }

[dev-dependencies]
insta.workspace = true
